--- a/index.html
+++ b/index.html
@@ -9,25 +9,29 @@
 	<link rel="stylesheet" href="/CSS/modal.css">
 	<link rel="icon" href="/frame-3.ico">
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-	
+	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 	<title>SEH</title>
 </head>
 <body>
 	<div class="modal">
 		<div class="modal-content">
-			<span class="close">&times;</span>
 			<div class="modal-header">
 				<h1>This is for Quality Assurance Only</h1>
+				<span class="close">&times;</span>
+				
 			</div>
 			<div class="modal-body">
-				<p>Thank you for participating in the testing of our website. We ask that if you come into any errors on the site that you contact <a target="_blank" href="mailto:contact@socialengineeringhelp.com">contact@socialengineeringhelp.com</a> using the following format:</p>
-				<p style="padding-left: 20px;">
-					Subject Header: QA <br>
-					Description of Error<br>
-					What device was used	
+				<p>Thank you for participating in the testing of our website. We ask that if you come into any errors on the site that you contact <a target="_blank" href="mailto:contact@socialengineeringhelp.com">contact@socialengineeringhelp.com</a> using the following format: <br><br></p>
+				<ul style="padding-left: 20px;">
+					<li>Email Subject Header: <b>QA</b></li>
+					<li>Device type (Phone/PC)</li>
+					<li>Nature of Error / Suggestion</li>
+				</ul>
+				<p>
+					<br>
+					Any suggestions help us to improve everyone's future experience.
 				</p>
-			</div>
-			
+			</div>	
 		</div>
 	</div>
 	<div class="landingPage-desktop">	
@@ -44,7 +48,7 @@
 			<a href="/p/home/">JUMP IN</a>
 		</div>
 	</div>
-	<script src="/JavaScript/modal.js"></script>
+	<script src="/JavaScript/modalIndex.js"></script>
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script>AOS.init();</script>
 </body>
