--- a/p/common/navbar.html
+++ b/p/common/navbar.html
@@ -1,3 +1,6 @@
+<div id="myModal"></div>
+<button id="modalBtn">Click this to see the email format</button>
+<script src="/JavaScript/modal.js"></script>
 <div class="navbar">
 	<div class="desktop">
 		<a id="homeButton" href="../home/"><i class="fas fa-arrow-left"></i></a>
@@ -21,8 +24,7 @@
 				<a href="../spear-phishing/">Spear-phishing</a>
 				<a href="../water-holing/">Water-holing</a>
 				<a href="../vishing/">Vishing</a>
-			</div>
-			
+			</div>	
 		</div>
 	</div>
 </div>
