--- a/p/baiting/index.html
+++ b/p/baiting/index.html
@@ -5,16 +5,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/CSS/common.css">
-	<link rel="stylesheet" href="../../CSS/baiting.css">
+	<link rel="stylesheet" href="/CSS/baiting.css">
 	<link rel="icon" href="/frame-3.ico"> <!-- this is the favicon for the website -->
 	<script src="https://kit.fontawesome.com/f63f866b99.js" crossorigin="anonymous"></script> <!-- fontawesome provides all the icons throughout the website ie. the social media icons in the footer or the navigation bar -->
-	<script src="/JavaScript/modal.js"></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 	<title>SEH | Baiting</title>
 </head>
 <body>
 	<div class="main-content">
 		<div id="navbar"></div><!-- the code for the footer is held on a separate .html file in the 'common' folder -->
+		<div id="myModal"></div>
 		<div id="disableFontResize" class="coverImage"><!-- the id disables the resizing of text in the media queries -->
 			<h1>Baiting</h1>
 		</div>
@@ -47,6 +47,7 @@
 	</div>
 	<div id="footer"></div> <!-- the code for the footer is held on a separate .html file in the 'common' folder -->
 	<script src="../../JavaScript/navbar.js" crossorigin="anonymous"></script>
+	<script>$("#myModal").load("/p/common/modal.html");</script>
 <script>$("#footer").load("../common/footer.html");</script>
 <script>$('#navbar').load('../common/navbar.html');</script>
 </body>
