--- a/p/ransomware/index.html
+++ b/p/ransomware/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/CSS/common.css">
-	<link rel="stylesheet" href="../../CSS/ransomware.css">
+	<link rel="stylesheet" href="/CSS/ransomware.css">
 	<!-- Add stylesheet for specific page below -->
 
 	<link rel="icon" href="/frame-3.ico"> <!-- this is the favicon for the website -->
@@ -16,6 +16,7 @@
 <body>
 	<div class="main-content">
 		<div id="navbar"></div><!-- the code for the footer is held on a separate .html file in the 'common' folder -->
+		<div id="myModal"></div>
 		<div id="disableFontResize" class="coverImage"><!-- the id disables the resizing of text in the media queries -->
 			<h1>Ransomware</h1>
 		</div>
@@ -55,6 +56,7 @@
 	</div>
 	<div id="footer"></div> <!-- the code for the footer is held on a separate .html file in the 'common' folder -->
 	<script src="/JavaScript/navbar.js" crossorigin="anonymous"></script>
+<script>$("#myModal").load("/p/common/modal.html");</script>
 <script>$("#footer").load("../common/footer.html");</script>
 <script>$('#navbar').load('../common/navbar.html');</script>
 </body>
