--- a/p/vishing/index.html
+++ b/p/vishing/index.html
@@ -16,6 +16,7 @@
 <body>
 	<div class="main-content">
 		<div id="navbar"></div><!-- the code for the footer is held on a separate .html file in the 'common' folder -->
+		<div id="myModal"></div>
 		<div id="disableFontResize" class="coverImage"><!-- the id disables the resizing of text in the media queries -->
 			<h1>Vishing</h1>
 		</div>
@@ -45,6 +46,7 @@
 	</div>
 	<div id="footer"></div> <!-- the code for the footer is held on a separate .html file in the 'common' folder -->
 	<script src="/JavaScript/navbar.js" crossorigin="anonymous"></script>
+	<script>$("#myModal").load("/p/common/modal.html");</script>
 <script>$("#footer").load("../common/footer.html");</script>
 <script>$('#navbar').load('../common/navbar.html');</script>
 </body>
