--- a/p/baiting/index.html
+++ b/p/baiting/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/CSS/common.css">
 	<link rel="stylesheet" href="/CSS/baiting.css">
+	<link rel="stylesheet" href="/CSS/modal.css">
 	<link rel="icon" href="/frame-3.ico"> <!-- this is the favicon for the website -->
 	<script src="https://kit.fontawesome.com/f63f866b99.js" crossorigin="anonymous"></script> <!-- fontawesome provides all the icons throughout the website ie. the social media icons in the footer or the navigation bar -->
 	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
