--- a/p/water-holing/index.html
+++ b/p/water-holing/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/CSS/common.css">
 	<link rel="stylesheet" href="/CSS/water-holing.css">
+	<link rel="stylesheet" href="/CSS/modal.css">
 	<!-- Add stylesheet for specific page below -->
 
 	<link rel="icon" href="/frame-3.ico"> <!-- this is the favicon for the website -->
