--- a/attacks/home/index.html
+++ b/attacks/home/index.html
@@ -21,26 +21,26 @@
 		<div class="navbar">
 			<div class="desktop">
 				<a id="homeButton" href="/"><i class="fas fa-home"></i></a>
-				<a href="/p/baiting/">Baiting</a>
-				<a href="/p/ransomware/">Ransomware</a>
-				<a href="/p/pre-texting/">Pre-texting</a>
-				<a href="/p/phishing/">Phishing</a>
-				<a href="/p/spear-phishing/">Spear-phishing</a>
-				<a href="/p/water-holing/">Water-holing</a>
-				<a href="/p/vishing/">Vishing</a>
+				<a href="/attacks/baiting/">Baiting</a>
+				<a href="/attacks/ransomware/">Ransomware</a>
+				<a href="/attacks/pre-texting/">Pre-texting</a>
+				<a href="/attacks/phishing/">Phishing</a>
+				<a href="/attacks/spear-phishing/">Spear-phishing</a>
+				<a href="/attacks/water-holing/">Water-holing</a>
+				<a href="/attacks/vishing/">Vishing</a>
 			</div>
 			<div class="mobile">
 				<div class="menu-Toggle"></div> <!--This is the icon shown for the toggle action of the navigation bar-->
 				<div class="menu"> <!-- the total container-->
 					<div class="mobile-nav-container">
 						<a id="homeButton" href="/"><i class="fas fa-home"></i></a>
-						<a href="/p/baiting/">Baiting</a>
-						<a href="/p/ransomware/">Ransomware</a>
-						<a href="/p/pre-texting/">Pre-texting</a>
-						<a href="/p/phishing/">Phishing</a>
-						<a href="/p/spear-phishing/">Spear-phishing</a>
-						<a href="/p/water-holing/">Water-holing</a>
-						<a href="/p/vishing/">Vishing</a>
+						<a href="/attacks/baiting/">Baiting</a>
+						<a href="/attacks/ransomware/">Ransomware</a>
+						<a href="/attacks/pre-texting/">Pre-texting</a>
+						<a href="/attacks/phishing/">Phishing</a>
+						<a href="/attacks/spear-phishing/">Spear-phishing</a>
+						<a href="/attacks/water-holing/">Water-holing</a>
+						<a href="/attacks/vishing/">Vishing</a>
 					</div>
 					
 				</div>
@@ -71,7 +71,7 @@
 	</div>
 	<div id="footer"></div>
 	<script src="/JavaScript/modal.js"></script>
-	<script>$("#myModal").load('/p/common/modal.html');</script>
+	<script>$("#myModal").load('/attacks/common/modal.html');</script>
 	<script>$("#footer").load("../common/footer.html");</script>
 	<script src="/JavaScript/navbar.js" crossorigin="anonymous"></script>
 	<script src="/JavaScript/resize.js"></script>
