--- a/attacks/baiting/index.html
+++ b/attacks/baiting/index.html
@@ -47,9 +47,9 @@
 		</div>
 	</div>
 	<div id="footer"></div> <!-- the code for the footer is held on a separate .html file in the 'common' folder -->
-	<script src="../../JavaScript/navbar.js" crossorigin="anonymous"></script>
-	<script>$("#myModal").load("/p/common/modal.html");</script>
-<script>$("#footer").load("../common/footer.html");</script>
-<script>$('#navbar').load('../common/navbar.html');</script>
+	<script src="/JavaScript/navbar.js" crossorigin="anonymous"></script>
+	<script>$("#myModal").load("/attacks/common/modal.html");</script>
+<script>$("#footer").load("/attacks/common/footer.html");</script>
+<script>$('#navbar').load('/attacks/common/navbar.html');</script>
 </body>
 </html>
