--- a/attacks/common/footer.html
+++ b/attacks/common/footer.html
@@ -24,12 +24,12 @@
 	<div id="right">
 		<h3>Contact Us</h3>
 		<div class="contactLinks desktop">
-			<a class="desktop" href="/p/resources/">Resources</a>
+			<a class="desktop" href="/attacks/resources/">Resources</a>
 			<a class="desktop"  href="/">Email Us</a>
 			<a class="desktop" target="_blank" href="tel:+353 1 298 5412">+353 1 298 5412</a>
 		</div>
 		<div class="contactLinks mobile">
-			<div><a class="mobile" href="/p/resources/"><i class="far fa-file-pdf"></i></a></div>
+			<div><a class="mobile" href="/attacks/resources/"><i class="far fa-file-pdf"></i></a></div>
 			<div><a class="mobile" href="mailto: contact@socialengineeringhelp.com?subject=Customer Query"><i class="far fa-envelope"></i></a></div>
 			<div><a class="mobile" href="tel:+353 1 298 5412"><i class="fas fa-phone"></i></a></div>
 			
