--- a/attacks/water-holing/index.html
+++ b/attacks/water-holing/index.html
@@ -53,7 +53,7 @@
 	</div>
 	<div id="footer"></div> <!-- the code for the footer is held on a separate .html file in the 'common' folder -->
 	<script src="/JavaScript/navbar.js" crossorigin="anonymous"></script>
-	<script>$("#myModal").load("/p/common/modal.html");</script>
+	<script>$("#myModal").load("/attacks/common/modal.html");</script>
 <script>$("#footer").load("../common/footer.html");</script>
 <script>$('#navbar').load('../common/navbar.html');</script>
 </body>
