--- a/attacks/common/footer.html
+++ b/attacks/common/footer.html
@@ -25,12 +25,12 @@
 		<h3>Contact Us</h3>
 		<div class="contactLinks desktop">
 			<a class="desktop" href="/attacks/resources/">Resources</a>
-			<a class="desktop"  href="/">Email Us</a>
+			<a class="desktop"  href="/contact-us/">Email Us</a>
 			<a class="desktop" target="_blank" href="tel:+353 1 298 5412">+353 1 298 5412</a>
 		</div>
 		<div class="contactLinks mobile">
 			<div><a class="mobile" href="/attacks/resources/"><i class="far fa-file-pdf"></i></a></div>
-			<div><a class="mobile" href="mailto: contact@socialengineeringhelp.com?subject=Customer Query"><i class="far fa-envelope"></i></a></div>
+			<div><a class="mobile" href="/contact-us/"><i class="far fa-envelope"></i></a></div>
 			<div><a class="mobile" href="tel:+353 1 298 5412"><i class="fas fa-phone"></i></a></div>
 			
 		</div>
@@ -40,7 +40,7 @@
 color:var(--text-color-override);
 display:flex;
 justify-content: space-between;
-background-color: var(--navy-theme);
+background-color: rgba(var(--navy-theme),1);
 font-family: 'roboto';padding-left: 1rem;
 padding-bottom: 0.5rem;
 font-size: 0.7rem;
