--- a/attacks/common/navbar.html
+++ b/attacks/common/navbar.html
@@ -1,29 +1,27 @@
-<div id="myModal"></div>
-<button id="modalBtn">Click this to see the email format</button>
-<script src="/JavaScript/modal.js"></script>
+<button id="modalBtn"><a href="/contact-us/">Quality Assurance Form</a></button>
 <div class="navbar">
 	<div class="desktop">
-		<a id="homeButton" href="../home/"><i class="fas fa-arrow-left"></i></a>
-		<a href="../baiting/">Baiting</a>
-		<a href="../ransomware/">Ransomware</a>
-		<a href="../pre-texting/">Pre-texting</a>
-		<a href="../phishing/">Phishing</a>
-		<a href="../spear-phishing/">Spear-phishing</a>
-		<a href="../water-holing/">Water-holing</a>
-		<a href="../vishing/">Vishing</a>
+		<a id="homeButton" href="/attacks/home/"><i class="fas fa-arrow-left"></i></a>
+		<a href="/attacks/baiting/">Baiting</a>
+		<a href="/attacks/ransomware/">Ransomware</a>
+		<a href="/attacks/pre-texting/">Pre-texting</a>
+		<a href="/attacks/phishing/">Phishing</a>
+		<a href="/attacks/spear-phishing/">Spear-phishing</a>
+		<a href="/attacks/water-holing/">Water-holing</a>
+		<a href="/attacks/vishing/">Vishing</a>
 	</div>
 	<div class="mobile">
 		<div class="menu-Toggle"></div> <!--This is the icon shown for the toggle action of the navigation bar-->
 		<div class="menu"> <!-- the total container-->
 			<div class="mobile-nav-container">
-				<a id="homeButton" href="../home/"><i class="fas fa-arrow-left"></i></a>
-				<a href="../baiting/">Baiting</a>
-				<a href="../ransomware/">Ransomware</a>
-				<a href="../pre-texting/">Pre-texting</a>
-				<a href="../phishing/">Phishing</a>
-				<a href="../spear-phishing/">Spear-phishing</a>
-				<a href="../water-holing/">Water-holing</a>
-				<a href="../vishing/">Vishing</a>
+				<a id="homeButton" href="/attacks/home/"><i class="fas fa-arrow-left"></i></a>
+				<a href="/attacks/baiting/">Baiting</a>
+				<a href="/attacks/ransomware/">Ransomware</a>
+				<a href="/attacks/pre-texting/">Pre-texting</a>
+				<a href="/attacks/phishing/">Phishing</a>
+				<a href="/attacks/spear-phishing/">Spear-phishing</a>
+				<a href="/attacks/water-holing/">Water-holing</a>
+				<a href="/attacks/vishing/">Vishing</a>
 			</div>	
 		</div>
 	</div>
