--- a/attacks/home/index.html
+++ b/attacks/home/index.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/CSS/home.css">
 	<link rel="stylesheet" href="/CSS/common.css">
-	<link rel="stylesheet" href="/CSS/modal.css">
 	<link rel="icon" href="/frame-3.ico">
 	<script src="https://kit.fontawesome.com/f63f866b99.js" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
@@ -16,8 +15,7 @@
 </head>
 <body>
 	<div class="main-content">
-		<div id="myModal"></div>
-		<button id="modalBtn">Click this to see the email format</button>
+		<button id="modalBtn"><a href="/contact-us/">Quality Assurance Form</a></button>
 		<div class="navbar">
 			<div class="desktop">
 				<a id="homeButton" href="/"><i class="fas fa-home"></i></a>
@@ -70,8 +68,6 @@
 		</div>
 	</div>
 	<div id="footer"></div>
-	<script src="/JavaScript/modal.js"></script>
-	<script>$("#myModal").load('/attacks/common/modal.html');</script>
 	<script>$("#footer").load("../common/footer.html");</script>
 	<script src="/JavaScript/navbar.js" crossorigin="anonymous"></script>
 	<script src="/JavaScript/resize.js"></script>
