--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta name="description" content="A site created with the express purpose of informing the public of ">
+	<meta name="keywords" content="social,engineering,help, social engineering help, social engineering, cfe dundrum, college of further education dundrum, dundrum cfe,">
 	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="CSS/index.css">
-	<link rel="stylesheet" href="CSS/common.css">
+	<link rel="stylesheet" href="/CSS/index.css">
+	<link rel="stylesheet" href="/CSS/common.css">
 	<link rel="stylesheet" href="/CSS/modal.css">
 	<link rel="icon" href="/frame-3.ico">
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -16,20 +18,16 @@
 	<div class="modal">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h1>This is for Quality Assurance Only</h1>
-				<span class="close">&times;</span>
-				
+				<h1 style="color: white;">This is for Quality Assurance Only</h1>
+				<span class="close">&times;</span>	
 			</div>
 			<div class="modal-body">
-				<p>Thank you for participating in the testing of our website. We ask that if you come into any errors on the site that you contact <a target="_blank" href="mailto:contact@socialengineeringhelp.com">contact@socialengineeringhelp.com</a> using the following format: <br><br></p>
-				<ul style="padding-left: 20px;">
-					<li>Email Subject Header: <b>QA</b></li>
-					<li>Device type (Phone/PC)</li>
-					<li>Nature of Error / Suggestion</li>
-				</ul>
-				<p>
-					<br>
-					Any suggestions help us to improve everyone's future experience.
+				<div style="display: flex; align-items: center;width: 100%;justify-content: center;">
+					<img src="/frame-3.ico" height="50px" style="padding-bottom: 0.5rem;" alt="">
+				</div>
+				<p style="color:white;">
+					Thank you for participating in the testing phase of the website. <br>
+					Please browse all pages on the website for errors. We would also be grateful for any suggestions given about the layout or content.
 				</p>
 			</div>	
 		</div>
