--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,13 @@
 	<!-- Add stylesheet for specific page below -->
 
 	<link rel="icon" href="/frame-3.ico"> <!-- this is the favicon for the website -->
-	<script src="https://kit.fontawesome.com/f63f866b99.js" crossorigin="anonymous"></script> <!-- fontawesome provides all the icons throughout the website ie. the social media icons in the footer or the navigation bar -->
-	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-	<title>Document</title>
+	<script src="https://kit.fontawesome.com/f63f866b99.js" crossorigin="anonymous"></script>
+	<!-- fontawesome provides all the icons throughout the website ie. the social media icons in the footer or the navigation bar -->
+	<script src="https://code.jquery.com/jquery-3.5.1.js"
+		integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+	<title>SEH | Contact Us</title>
 </head>
+
 <body>
 	<div id="navbar"></div><!-- the code for the footer is held on a separate .html file in the 'common' folder -->
 	<div class="main-content">
@@ -24,15 +28,15 @@
 				<input type="email" name="_replyto" id="email" placeholder="johnsmith@example.com" required>
 			</div>
 			<div class="form-row">
-				<textarea name="message" id="message"></textarea>
+				<textarea name="message" id="message" placeholder="Enter message for design team"></textarea>
 			</div>
-
 			<button id="submit" type="submit">Submit</button>
 		</form>
 	</div>
 	<div id="footer"></div> <!-- the code for the footer is held on a separate .html file in the 'common' folder -->
-<script>$("#footer").load("/attacks/common/footer.html");</script>
-<script>$('#navbar').load('/attacks/common/navbar.html');</script>
-<script src="/JavaScript/navbar.js" crossorigin="anonymous"></script>
+	<script>$("#footer").load("/attacks/common/footer.html");</script>
+	<script>$('#navbar').load('/attacks/common/navbar.html');</script>
+	<script src="/JavaScript/navbar.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
