--- a/attacks/common/modal.html
+++ b/attacks/common/modal.html
@@ -2,10 +2,13 @@
 	<div class="modal-content">
 		<div class="modal-header">
 			<h1>This is for Quality Assurance Only</h1>
-			<span class="close">&times;</span>	
+			<span class="close">&times;</span>
 		</div>
 		<div class="modal-body">
-			<p>Thank you for participating in the testing of our website. We ask that if you come into any errors on the site that you contact <a target="_blank" href="mailto:contact@socialengineeringhelp.com">contact@socialengineeringhelp.com</a> using the following format: <br><br></p>
+			<p>Thank you for participating in the testing of our website. We ask that if you come into any errors on the
+				site that you contact <a target="_blank"
+					href="mailto:contact@socialengineeringhelp.com">contact@socialengineeringhelp.com</a> using the
+				following format: <br><br></p>
 			<ul style="padding-left: 20px;">
 				<li>Email Subject Header: <b>QA</b></li>
 				<li>Device type (Phone/PC)</li>
@@ -15,6 +18,6 @@
 				<br>
 				Any suggestions help us to improve everyone's future experience.
 			</p>
-		</div>	
+		</div>
 	</div>
 </div>
