--- a/attacks/common/navbar.html
+++ b/attacks/common/navbar.html
@@ -1,4 +1,4 @@
-<button id="modalBtn"><a href="/contact-us/">Quality Assurance Form</a></button>
+<a id="modalBtn" href="/contact-us/index.html">Quality Assurance Form</a>
 <div class="navbar">
 	<div class="desktop">
 		<a id="homeButton" href="/attacks/home/"><i class="fas fa-arrow-left"></i></a>
