--- a/attacks/home/index.html
+++ b/attacks/home/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<div class="main-content">
-		<button id="modalBtn"><a href="/contact-us/">Quality Assurance Form</a></button>
+		<a id="modalBtn" href="/contact-us/">Quality Assurance Form</a>
 		<div class="navbar">
 			<div class="desktop">
 				<a id="homeButton" href="/"><i class="fas fa-home"></i></a>
