--- a/quality-assurance/index.html
+++ b/quality-assurance/index.html
@@ -26,7 +26,7 @@
 			<div class="form-row"><input type="text" name="course" id="course" placeholder="Computer Science"></div>
 			<div class="form-row">
 				<select name="type" id="typeOfQuery" required>
-					<option value="Choose type of Query..."></option>
+					<option value="">Choose type of Query...</option>
 					<option value="Error">Error</option>
 					<option value="Suggestion">Suggestion</option>
 				</select>
