Disabled Javascript form

--- a/attacks/common/navbar.html
+++ b/attacks/common/navbar.html
@@ -1,4 +1,4 @@
-<a id="modalBtn" href="/quality-assurance/">Quality Assurance Form</a>
+<!-- <a id="modalBtn" href="/quality-assurance/">Quality Assurance Form</a> -->
 <div class="navbar">
 	<div class="desktop">
 		<a id="homeButton" href="/attacks/home/"><i class="fas fa-arrow-left"></i></a>
