--- a/attacks/common/footer.html
+++ b/attacks/common/footer.html
@@ -24,7 +24,7 @@
 	<div id="right">
 		<h3>Contact Us</h3>
 		<div class="contactLinks desktop">
-			<a class="desktop" href="/attacks/resources/">Resources</a>
+			<!-- <a class="desktop" href="/attacks/resources/">Resources</a> -->
 			<a class="desktop"  href="/contact-us/">Email Us</a>
 			<a class="desktop" target="_blank" href="tel:+353 1 298 5412">+353 1 298 5412</a>
 		</div>
