--- a/attacks/common/footer.html
+++ b/attacks/common/footer.html
@@ -29,7 +29,7 @@
 			<a class="desktop" target="_blank" href="tel:+353 1 298 5412">+353 1 298 5412</a>
 		</div>
 		<div class="contactLinks mobile">
-			<div><a class="mobile" href="/attacks/resources/"><i class="far fa-file-pdf"></i></a></div>
+			<!-- <div><a class="mobile" href="/attacks/resources/"><i class="far fa-file-pdf"></i></a></div> -->
 			<div><a class="mobile" href="/contact-us/"><i class="far fa-envelope"></i></a></div>
 			<div><a class="mobile" href="tel:+353 1 298 5412"><i class="fas fa-phone"></i></a></div>
 			
